--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "dstrect",
         "SDLK",
         "srcrect",
+        "subpixels",
         "WINDOWPOS"
     ],
     "files.associations": {
