--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
     ],
     "files.associations": {
         "ostream": "cpp",
-        "main": "cpp"
+        "main": "cpp",
+        "string": "cpp"
     },
     "C_Cpp.dimInactiveRegions": false
 }
